--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -92,9 +92,7 @@ jobs:
           subscriptionId: ${{ secrets.AZURE_CREDENTIALS.subscriptionId}}
           resourceGroupName: ${{ env.networkResourceGroupName }}
           template: ./src/deploy/bicep/network/deployNetwork.bicep
-          parameters: |
-            solutionName=${{ env.solutionName }} 
-            managementResourceGroupName=${{ env.managementResourceGroupName }}
+          parameters: 'solutionName=${{ env.solutionName }} managementResourceGroupName=${{ env.managementResourceGroupName }}'
 
       - name: Deploy Dev Center Resources
         uses: azure/arm-deploy@v1
@@ -102,9 +100,7 @@ jobs:
           subscriptionId: ${{ secrets.AZURE_CREDENTIALS.subscriptionId}}
           resourceGroupName: ${{ env.devBoxResourceGroupName }}
           template: ./src/deploy/bicep/devBox/deploy.bicep
-          parameters: |
-            solutionName=${{ env.solutionName }} 
-            managementResourceGroupName=${{ env.managementResourceGroupName }}
+          parameters: 'solutionName=${{ env.solutionName }} managementResourceGroupName=${{ env.managementResourceGroupName }}'
 
   publish-bicep-artifacts:
       runs-on: ubuntu-latest
