--- a/.azdevops/workflows/deployDevBox.yml
+++ b/.azdevops/workflows/deployDevBox.yml
@@ -5,7 +5,7 @@ pr:
 - none
 
 variables:
-  location: "westus3"
+  location: "northuscentral"
   solutionName: "PetDx"
   devBoxResourceGroupName: "PetDx-rg"
   networkResourceGroupName: "PetDx-Network-rg"
