--- a/.github/workflows/devExpNewRelease.yaml
+++ b/.github/workflows/devExpNewRelease.yaml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch: # Manually trigger the workflow
 
 env:
-  location: "westus3"
+  location: "northuscentral"
   solutionName: "PetDx"
   devBoxResourceGroupName: "PetDx-rg"
   networkResourceGroupName: "PetDx-Network-rg"
