--- a/.azdevops/workflows/deployDevBox.yml
+++ b/.azdevops/workflows/deployDevBox.yml
@@ -15,11 +15,12 @@ jobs:
 - job: TestAzureCredentialsAndLogin
   displayName: 'Test Azure Credentials and Login'
   pool:
-    vmImage: 'ubuntu-latest'
+    vmImage: 'windows-latest'
+    name: 'Desktop'
   steps:
   - task: AzureCLI@2
     inputs:
-      azureResourceManagerConnection: '$(azureServiceConnection)'
+      connectedServiceNameARM: AzureDevOpsConnection
       scriptType: 'bash'
       scriptLocation: 'inlineScript'
       inlineScript: 'echo "Logged in to Azure"'
@@ -28,20 +29,21 @@ jobs:
   displayName: 'Build Bicep Templates'
   dependsOn: TestAzureCredentialsAndLogin
   pool:
-    vmImage: 'ubuntu-latest'
+    vmImage: 'windows-latest'
+    name: 'Desktop'
   steps:
   - task: AzureCLI@2
     inputs:
-      azureResourceManagerConnection: '$(azureServiceConnection)'
+      connectedServiceNameARM: AzureDevOpsConnection
       scriptType: 'bash'
       scriptLocation: 'inlineScript'
       inlineScript: 'az bicep upgrade'
 
-  - task: Checkout@v2
+  - checkout: self
 
   - task: AzureCLI@2
     inputs:
-      azureResourceManagerConnection: '$(azureServiceConnection)'
+      connectedServiceNameARM: AzureDevOpsConnection
       scriptType: 'bash'
       scriptLocation: 'inlineScript'
       inlineScript: |
@@ -66,28 +68,29 @@ jobs:
   displayName: 'Deploy Resources'
   dependsOn: Build
   pool:
-    vmImage: 'ubuntu-latest'
+    vmImage: 'windows-latest'
+    name: 'Desktop'
   steps:
   - task: AzureCLI@2
     inputs:
-      azureResourceManagerConnection: '$(azureServiceConnection)'
+      connectedServiceNameARM: AzureDevOpsConnection
       scriptType: 'bash'
       scriptLocation: 'inlineScript'
       inlineScript: |
         sudo apt-get update && sudo az bicep upgrade
 
-  - task: Checkout@v2
+  - checkout: self
 
   - task: AzureCLI@2
     inputs:
-      azureResourceManagerConnection: '$(azureServiceConnection)'
+      connectedServiceNameARM: AzureDevOpsConnection
       scriptType: 'bash'
       scriptLocation: 'inlineScript'
       inlineScript: 'chmod +x ./src/deploy/bicep/bash/deployResourcesOrganization.sh'
 
   - task: AzureCLI@2
     inputs:
-      azureResourceManagerConnection: '$(azureServiceConnection)'
+      connectedServiceNameARM: AzureDevOpsConnection
       scriptType: 'bash'
       scriptLocation: 'inlineScript'
       inlineScript: |
@@ -95,7 +98,7 @@ jobs:
 
   - task: AzureResourceManagerTemplateDeployment@3
     inputs:
-      azureResourceManagerConnection: '$(azureServiceConnection)'
+      connectedServiceNameARM: AzureDevOpsConnection
       resourceGroupName: '$(managementResourceGroupName)'
       location: '$(location)'
       csmFile: '$(Build.SourcesDirectory)/src/deploy/bicep/management/logAnalytics/deploy.bicep'
@@ -103,7 +106,7 @@ jobs:
 
   - task: AzureResourceManagerTemplateDeployment@3
     inputs:
-      azureResourceManagerConnection: '$(azureServiceConnection)'
+      connectedServiceNameARM: AzureDevOpsConnection
       resourceGroupName: '$(networkResourceGroupName)'
       location: '$(location)'
       csmFile: '$(Build.SourcesDirectory)/src/deploy/bicep/network/deployNetwork.bicep'
@@ -111,7 +114,7 @@ jobs:
 
   - task: AzureResourceManagerTemplateDeployment@3
     inputs:
-      azureResourceManagerConnection: '$(azureServiceConnection)'
+      connectedServiceNameARM: AzureDevOpsConnection
       resourceGroupName: '$(devBoxResourceGroupName)'
       location: '$(location)'
       csmFile: '$(Build.SourcesDirectory)/src/deploy/bicep/devBox/deploy.bicep'
@@ -121,9 +124,10 @@ jobs:
   displayName: 'Publish Bicep Artifacts'
   dependsOn: Build
   pool:
-    vmImage: 'ubuntu-latest'
+    vmImage: 'windows-latest'
+    name: 'Desktop'
   steps:
-  - task: Checkout@v2
+  - checkout: self
 
   - task: DownloadPipelineArtifact@2
     inputs:
