--- a/.azdevops/workflows/deployDevBox.yml
+++ b/.azdevops/workflows/deployDevBox.yml
@@ -31,7 +31,7 @@ jobs:
     inputs:
       targetType: 'inline'
       script: |
-        az bicep build ./src/deploy/bicep/management/logAnalytics/deploy.bicep
+        az bicep build --file ./src/deploy/bicep/management/logAnalytics/deploy.bicep --outdir ./bicepArtifacts
   
   - task: Bash@3
     displayName: 'Grant permissions to the Script'
