--- a/.github/workflows/devExpNewRelease.yaml
+++ b/.github/workflows/devExpNewRelease.yaml
@@ -36,13 +36,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Build Management Bicep Templates
+      - name: Build Dev Box Management Bicep files
         run: az bicep build --file ./src/deploy/bicep/management/logAnalytics/deploy.bicep --outdir ./bicepArtifacts
 
-      - name: Build Network Bicep Templates
+      - name: Build Dev Box Network Bicep files
         run: az bicep build --file ./src/deploy/bicep/network/deployNetwork.bicep --outdir ./bicepArtifacts
 
-      - name: Build DevCenter Bicep Templates
+      - name: Build Dev Box DevCenter Bicep files
         run: az bicep build --file ./src/deploy/bicep/devBox/deploy.bicep --outdir ./bicepArtifacts
 
       - name: Compress Bicep Artifacts
