--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -26,6 +26,7 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
   Build:
+    name: Build Bicep Artifacts
     runs-on: ubuntu-latest
     needs: Test-Azure-Credentials-And-Login
     steps:
@@ -36,13 +37,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Build Management Bicep Templates
+      - name: Build Dev Box Management Bicep files
         run: az bicep build --file ./src/deploy/bicep/management/logAnalytics/deploy.bicep --outdir ./bicepArtifacts
 
-      - name: Build Network Bicep Templates
+      - name: Build Dev Box Network Bicep files
         run: az bicep build --file ./src/deploy/bicep/network/deployNetwork.bicep --outdir ./bicepArtifacts
 
-      - name: Build DevCenter Bicep Templates
+      - name: Build Dev Box DevCenter Bicep files
         run: az bicep build --file ./src/deploy/bicep/devBox/deploy.bicep --outdir ./bicepArtifacts
 
       - name: Compress Bicep Artifacts
@@ -56,6 +57,7 @@ jobs:
           path: bicepArtifacts_v1.0.0-deploy-${{ github.run_number }}.zip
 
   Deploy:
+    name: Deploy Dev Box Resources to Azure
     runs-on: ubuntu-latest
     needs: Build
     steps:
